--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@ the app once it's ready to be mounted. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Mock TA4 Prototype</title>
+    <title>491 proj Prototype</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but mock-ta4 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but 491 proj Prototype doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app">
       If you see this, there was an error mounting the app. Try reloading the page.
